--- a/DataManagement/templates/DataManagement/TestView.html
+++ b/DataManagement/templates/DataManagement/TestView.html
@@ -129,10 +129,10 @@
  			
 		}
 		
- 		$scope.drawTable = function (){						
- 			var table = new google.visualization.Table(document.getElementById('table_div'));
- 			table.draw($scope.data, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});			
- 		}
+//  		$scope.drawTable = function (){						
+//  			var table = new google.visualization.Table(document.getElementById('table_div'));
+//  			table.draw($scope.data, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});			
+//  		}
 		
 		$scope.drawView = function (){
 			$scope.setView();
